--- a/PREVISÃO-CEP/style.css
+++ b/PREVISÃO-CEP/style.css
@@ -20,19 +20,21 @@ body {
 
 form {
 
-    width: 650px;
+    width: 500px;
     max-width: 700px;
+    height: 600PX;
     margin: 20px auto;
-    padding: 20px;
-    background-color: #5BC0EB;
-    border: 20px solid #006992;
+    padding: 8px;
+    background-color: rgba(80, 80, 80, 0.644);
+    border: 10px solid #006992;
+    border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h2 {
+.a  {
 
     text-align: center;
-    font-size: 35px;
+    font-size: 25px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #FFFFFF;
 
@@ -42,7 +44,7 @@ label {
 
     display: block;
     margin-bottom: 10px;
-    font-size: 20px;
+    font-size: 15px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color:  #ffffff;
     font-weight: bolder;
@@ -52,7 +54,7 @@ label {
 input[type="text"] {
 
     width: 100%;
-    padding: 10px;
+    padding: 5px;
     border: 1px solid #ccc;
     border-radius: 4px;
 
@@ -75,9 +77,9 @@ input[type="text"] {
 
 .tem1 p {
 
-    font-size: 28px;
+    font-size: 18px;
     margin-top: 25px;
-    color:  #006992;
+    color: #FFFFFF;
     font-weight: bolder;
 
 }
@@ -86,22 +88,23 @@ input[type="text"] {
 
     width: 50px;
     height: 50px;
+    margin-top: 10px;
 
 }
 
 .texto-previsao {
 
-    font-size: 28px;
-    color:  #006992;
+    font-size: 18px;
+    color: #FFFFFF;
     font-weight: bolder;
 
 }
 
 .umd1 p {
 
-    font-size: 28px;
+    font-size: 18px;
     margin-top: 25px;
-    color:  #006992;
+    color: #FFFFFF;
     font-weight: bolder;
 
 }
@@ -110,5 +113,16 @@ svg {
 
     vertical-align: middle;
     margin-right: 5px;
+    margin-left: 20px;
+    margin-top: 10px;
+    color: #FFFFFF;
 
+}
+
+.cidade {
+
+    text-align: center;
+    font-size: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #FFFFFF;
 }
