--- a/PREVISÃO-CEP/style.css
+++ b/PREVISÃO-CEP/style.css
@@ -14,7 +14,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("https://source.unsplash.com/1920x1080/?cidade");
+    background-image: url("https://source.unsplash.com/1920x1080/?cidades");
 
 }
 
